recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var a:Double
    ^Tree:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var b:Double
    ^Tree:17: error: not found: value shreink
avance(length*shrink*shreink)
                     ^