recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

var a:Double
var b:Double
current(steps)
avance(length)
droite(angle)
avance(length*shrink)
droite(angle)
a = getX()
b = getY() 
avance(length*shrink)
droite(angle)
setPos(a,b)
gauche(2*angle)
avance(length*shrink*shreink)




}
